crates/karva/tests/it/extensions/tags/snapshots/it__extensions__tags__expect_fail__expected_failure_does_not_absorb_other_failures@karva_background.snap
---
source: crates/karva/tests/it/extensions/tags/expect_fail.rs
info:
  program: karva
  args:
    - test
    - "--no-parallel"
    - "--retry=1"
  env:
    VIRTUAL_ENV: /Users/matthew/Library/Caches/karva/test-cache/shared-venv-py3.13-1791047291
---
success: false
exit_code: 1
----- stdout -----
    Starting 1 test across 1 worker
  TRY 1 FAIL [TIME] test::test_expected
  TRY 2 FAIL [TIME] test::test_expected

failures:

test::test_expected:

error[test-failure]: Test `test_expected` failed
 --> test.py:9:11
  |
9 | async def test_expected():
  |           ^^^^^^^^^^^^^
info: Test failed here
 --> test.py:6:1
  |
6 | async def broken(): raise ValueError('background failed')
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
info: Unhandled exception in background task: Task-[N]: ValueError: background failed

────────────
     Summary [TIME] 1 test run: 0 passed, 1 failed, 0 skipped

----- stderr -----
