crates/karva/tests/it/extensions/tags/snapshots/it__extensions__tags__expect_fail__expected_failure_does_not_absorb_other_failures@karva_teardown.snap
---
source: crates/karva/tests/it/extensions/tags/expect_fail.rs
info:
  program: karva
  args:
    - test
    - "--no-parallel"
    - "--retry=1"
  env:
    VIRTUAL_ENV: /Users/matthew/Library/Caches/karva/test-cache/shared-venv-py3.13-1791047291
---
success: false
exit_code: 1
----- stdout -----
    Starting 1 test across 1 worker
 TRY 1 ERROR [TIME] test::test_expected(value=1)
 TRY 2 ERROR [TIME] test::test_expected(value=1)

failures:

test::test_expected(value=1):

error[invalid-fixture-finalizer]: Discovered an invalid fixture finalizer `value`
 --> test.py:6:5
  |
6 | def value():
  |     ^^^^^
info: Failed to reset fixture: teardown failed

────────────
     Summary [TIME] 1 test run: 0 passed, 1 error, 0 skipped

----- stderr -----
