crates/karva/tests/it/extensions/tags/snapshots/it__extensions__tags__expect_fail__expected_failure_does_not_absorb_other_failures@pytest_setup.snap
---
source: crates/karva/tests/it/extensions/tags/expect_fail.rs
info:
  program: karva
  args:
    - test
    - "--no-parallel"
    - "--retry=1"
  env:
    VIRTUAL_ENV: /Users/matthew/Library/Caches/karva/test-cache/shared-venv-py3.13-1791047291
---
success: false
exit_code: 1
----- stdout -----
    Starting 1 test across 1 worker
 TRY 1 ERROR [TIME] test::test_expected
 TRY 2 ERROR [TIME] test::test_expected

failures:

test::test_expected (requires fixture `value`):

error[fixture-failure]: Fixture `value` failed
 --> test.py:6:5
  |
6 | def value(): raise ValueError('setup failed')
  |     ^^^^^
info: Fixture failed here
 --> test.py:6:1
  |
6 | def value(): raise ValueError('setup failed')
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
info: setup failed

────────────
     Summary [TIME] 1 test run: 0 passed, 1 error, 0 skipped

----- stderr -----
