crates/karva/tests/it/extensions/tags/snapshots/it__extensions__tags__expect_fail__expected_failure_does_not_absorb_other_failures@pytest_timeout.snap
---
source: crates/karva/tests/it/extensions/tags/expect_fail.rs
info:
  program: karva
  args:
    - test
    - "--no-parallel"
    - "--retry=1"
  env:
    VIRTUAL_ENV: /Users/matthew/Library/Caches/karva/test-cache/shared-venv-py3.13-1791048100
---
success: false
exit_code: 1
----- stdout -----
    Starting 1 test across 1 worker
  TRY 1 FAIL [TIME] test::test_expected
  TRY 2 FAIL [TIME] test::test_expected

failures:

test::test_expected:

error[test-failure]: Test `test_expected` failed
 --> test.py:9:11
  |
9 | async def test_expected():
  |           ^^^^^^^^^^^^^
info: Test exceeded timeout of 0.1 seconds

────────────
     Summary [TIME] 1 test run: 0 passed, 1 failed, 0 skipped

----- stderr -----
