crates/karva/tests/it/extensions/tags/snapshots/it__extensions__tags__expect_fail__expected_failure_matches_body_timeout_error@karva_true.snap
---
source: crates/karva/tests/it/extensions/tags/expect_fail.rs
info:
  program: karva
  args:
    - test
    - "--no-parallel"
  env:
    VIRTUAL_ENV: /Users/matthew/Library/Caches/karva/test-cache/shared-venv-py3.13-1791048795
---
success: true
exit_code: 0
----- stdout -----
    Starting 1 test across 1 worker
        PASS [TIME] test::test_expected
────────────
     Summary [TIME] 1 test run: 1 passed, 0 skipped

----- stderr -----
