crates/karva/tests/it/extensions/tags/snapshots/it__extensions__tags__expect_fail__invalid_expected_exception_policy_is_rejected@pytest_(ValueError, 42).snap
---
source: crates/karva/tests/it/extensions/tags/expect_fail.rs
info:
  program: karva
  args:
    - test
  env:
    VIRTUAL_ENV: /Users/matthew/Library/Caches/karva/test-cache/shared-venv-py3.13-1791047291
---
success: false
exit_code: 1
----- stdout -----
    Starting 1 test across 1 worker
diagnostics:

error[failed-to-import-module]: Failed to import python module `test`: expect_fail raises must be an exception class or a tuple of exception classes

────────────
     Summary [TIME] 0 tests run: 0 passed, 0 skipped

----- stderr -----
